# Pipeline_OCR-Export_Rapoarte_PDF

./: .env.local.example  .gitignore  AGENTS.md  README.md  eslint.config.mjs  instrumentation-node.ts  instrumentation.ts  next-env.d.ts  next.config.js  package-lock.json  package.json  playwright.config.audit.ts  playwright.config.ts  pytest.ini  test_output.txt  tsconfig.json  tsconfig.tsbuildinfo  vitest.config.ts  vitest.integration.config.ts
.claude/: settings.local.json
.next-e2e/dev/: prerender-manifest.json  trace
agent_docs/: COMMENTS_POLICY.md
app/: globals.css  layout.tsx  page.tsx  providers.tsx
app/_components/: DeleteDocButton.tsx  PreviewTabs.tsx  RecentDocs.tsx  StatusBadge.tsx  UploadForm.tsx
app/_lib/: config.ts  env.ts  meta.ts  processRunner.ts  queryClient.ts  schema.ts  storage.ts  utils.ts  workerClient.ts
components/: PreviewTabs.tsx  RecentDocs.tsx  StatusBadge.tsx  UploadForm.tsx
config/: docling.json  pymupdf.json  quality-gates.json
docs/: engine-comparison-long-report.md  pymupdf4llm-fixes-summary.md  table-strategy-analysis.md
e2e/: app.spec.ts  global-setup.ts
fixtures/docs/: generate_fixtures.py
fixtures/meta/: meta.success.json
lib/: config.ts  meta.ts  processRunner.ts  schema.ts  storage.ts  utils.ts
scripts/: bench_convert.py  bench_worker_reuse.py  generate_big_pdf.py  ux-diff.mjs
services/docling_worker/: DOCUMENTATIE_WORKER_DOCLING.md  convert.py  gates.py  pyproject.toml  pytest.ini  requirements.txt
services/docling_worker/tests/: test_convert_runtime.py  test_gates.py
tests/node/: setup.ts
(+139 files in other folders)
